* Wed Mar 08 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.2.0-0
- Updated puppetagent_cron:
-  Added `break_puppet_lock` param so users can clearly specify when they wish
   to forcibly enable the puppet agent.
-  Added `max_disable_time param`. Updated logic to determine when to
   forcibly enable a puppet agent, and moved logic into cron.pp for
   user-friendliness.
-  Set maxruntime default of 4 hours

* Wed Mar 01 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.1-0
- The previous audit rules relied on the puppet user existing, but in
  newer versions of puppet, the puppet user only exists on the
  puppetserver. This commit only puts auditing on the puppetserver.

* Mon Feb 20 2017 Jeanne Greuich <jeanne.greulich@onyxpoint.com> - 7.1.0-0
- Fix typos in the puppetagent cron script

* Mon Dec 10 2016 Nick Miller <nick.miller@onyxpoint.com> - 7.1.0-0
- Updated assets and versions
- Converted to puppet-strings
- Switched to the new catalyst pattern with simplib::lookup
- Strong typed module
- Set trusted_server_facts to true by default

* Wed Nov 23 2016 Jeanne Greulich <jgreulich.simp@onyxpoint.com> - 7.0.0-0
- update requirement versions

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.0-0
- Updated to compliance_markup version 2

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Updated iptables dependency version

* Thu Nov 10 2016 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- Removed puppetlast_support puppet_auth resource, it is unneeded

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com>, Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.0-0
- Upate to work with the latest Puppet 4 and Puppet Server
- Fixed a lot of tests and minor logic problems

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.7-0
- Fix Forge `haveged` dependency name

* Tue Sep 20 2016 Bryan Howard, Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.6-0
- Fixed bash redirection error in puppetagent_cron.erb
