@@ -62,7 +62,7 @@ class pupmod::master::base {
 
 
   package { $::pupmod::master::service:
-    ensure => 'latest',
+    ensure => $::pupmod::master::package_ensure,
     before => File[$::pupmod::confdir],
     notify => Service[$::pupmod::master::service]
   }
