@@ -1,3 +1,6 @@
+* Tue Apr 04 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.0-0
+- Add 'package_ensure' to allow users to specify that they want to use 'latest' or 'installed'
+
 * Wed Mar 08 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.2.0-0
 - Updated puppetagent_cron:
 -  Added `break_puppet_lock` param so users can clearly specify when they wish
